change the strucure of footer

--- a/frontend/travelpin/src/index.css
+++ b/frontend/travelpin/src/index.css
@@ -5,6 +5,7 @@
 @import "styles/Login.css";
 @import "styles/Register.css";
 @import "styles/TopBar.css";
+@import "styles/Footer.css";
 @import "styles/LefExpansionPanel/LeftExpansionPanel.css";
 @import 'styles/LefExpansionPanel/ListInterests.css';
 
